# naptha-ai-arxiv-daily

./: README.md  pyproject.toml
arxiv_daily_summary/: embedder.py  run.py  schemas.py  scraper.py  utils.py
arxiv_daily_summary/configs/: deployment.json  kb_deployments.json  llm_configs.json
