[tool.poetry]
name = "arxiv_daily_summary"
version = "0.1.0"
description = "Arxiv Summary for top papers in Decentralized AI daily"
authors = ["Ashwarya Maratha marathaashwarya@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
naptha-sdk = {git = "https://github.com/NapthaAI/naptha-sdk.git"}
pydantic = "^2.7.0"
colorama = "^0.4.6"
openai = "^1.59.6"
psycopg2-binary = "^2.9.10"
tqdm = "^4.67.1"
arxiv = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"